--- a/package.json
+++ b/package.json
@@ -49,8 +49,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
     "groq-sdk": "^0.37.0",
     "isomorphic-fetch": "^3.0.0",
+    "jspdf": "^4.1.0",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.563.0",
     "next": "^16.1.6",
     "next-themes": "^0.4.6",
@@ -67,6 +70,7 @@
     "wavesurfer.js": "^7.12.1"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^25.0.10",
     "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
